# qt3d-experiments

./: .gitignore  LICENSE  README.md
arrows-on-mesh/: arrows-on-mesh.pro  arrows.frag  main.cpp  main.qml  qml.qrc  shaders.qrc
billboards/: billboardgeometry.cpp  billboardgeometry.h  billboards.frag  billboards.geom  fun3d-billboards.pro  main.cpp  main.qml  qml.qrc  shaders.qrc
edge-detection/: EdgeMaterial.qml  MainMaterial.qml  MyScene.qml  PreprocessRenderTarget.qml  fun3d.pro  main.cpp  main.qml  qml.qrc
instanced/: fun3d-instanced.pro  instancedgeometry.cpp  instancedgeometry.h  main.cpp  main.qml  shaders.qrc
lines/: drawdata.cpp  drawdata.h  fun3d-lines.pro  lines.geom  main.cpp  main.qml  qml.qrc  shaders.qrc
logdepth/: CMakeLists.txt  basic.frag  basic.vert  main.cpp
msaa/: main.cpp  main.qml
rtc/: CMakeLists.txt  basic.frag  basic.vert  main.cpp  matrix4x4.cpp  matrix4x4.h  resources.qrc  rtc.py  vector3d.cpp  vector3d.h
silhouette-stencil/: fun3d-silhouette-stencil.pro  main.cpp  main.qml
ssao/: FinalMaterial.qml  MyScene.qml  PreprocessRenderTarget.qml  SsaoBlurMaterial.qml  SsaoMaterial.qml  fun3d-ssao.pro  main.cpp  main.qml  qml.qrc
